# talltable

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: docs.yml
docs/: build.py  index.md  serve.py  styles.css  template.html
scripts/: build_parts.py  build_wave.py  compact.py  ingest.py
slurm/: week.sbatch
src/talltable/: batch.py  constants.py  parallel_batch.py  partition.py  paths.py  query.py  util.py  waveid.py
talltable/: batch.py  constants.py  partition.py  paths.py
