[project]
name = "gal-gamma-xc"
version = "0.1.0"
description = ""
authors = [
    {name = "Connor Hainje",email = "cmhainje@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "astropy (>=7.1.0,<8.0.0)",
    "astroquery (>=0.4.10,<0.5.0)",
    "pyvo (>=1.7,<2.0)",
    "photutils (>=2.3.0,<3.0.0)",
    "healpy (>=1.18.1,<2.0.0)",
    "astropy-healpix (>=1.1.2,<2.0.0)",
    "duckdb (>=1.4.1,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "boto3 (>=1.40.60,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "talltable"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter-resource-usage>=1.2.0",
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
ipywidgets = "^8.1.7"

